cluster/word-arena/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordarena-ingress
  labels:
    service: web
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-strip-csp@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: wordarena.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordarena-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wordarena-backend
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: wordarena-backend
                port:
                  number: 80
